#2384 [Fixed] Logo: Fix contrast in ribbon and enable accessibility test

--- a/packages/core/src/components/logo/logo.scss
+++ b/packages/core/src/components/logo/logo.scss
@@ -60,7 +60,7 @@
   display: flex;
   place-items: center;
 
-  background-color: colors.$oranje;
+  background-color: colors.$mauve;
   border-radius: 3px;
   transform: rotate(3deg);
   padding: 0 8px;
